CodeSmell Se esta refactorizando el proyecto para corregir malas practicas