@@ -3,12 +3,11 @@ package co.edu.uco.ucobet.generales.application.primaryports.interactor.city.get
 import co.edu.uco.ucobet.generales.application.primaryports.dto.GetCityDTO;
 import co.edu.uco.ucobet.generales.application.primaryports.interactor.city.getcities.GetCitiesInteractor;
 import co.edu.uco.ucobet.generales.application.primaryports.mapper.CityDTOMapper;
-import co.edu.uco.ucobet.generales.application.useCase.city.getcities.GetCities;
+import co.edu.uco.ucobet.generales.application.usecase.city.getcities.GetCities;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -23,7 +22,8 @@ public class GetCitiesInteractorImpl implements GetCitiesInteractor {
     @Override
     public List<GetCityDTO> execute(GetCityDTO data) {
         return getCities.execute(null).stream()
-                    .map(CityDTOMapper.INSTANCE::toListCityDTO)
-                    .collect(Collectors.toList());
+                .map(CityDTOMapper.INSTANCE::toListCityDTO)
+                .toList();
     }
+
 }
