@@ -1,13 +1,12 @@
-package co.edu.uco.ucobet.generales.application.useCase.state.getstates.impl;
+package co.edu.uco.ucobet.generales.application.usecase.state.impl;
 
 import co.edu.uco.ucobet.generales.application.secondaryports.mapper.StateEntityMapper;
 import co.edu.uco.ucobet.generales.application.secondaryports.repository.StateRepository;
-import co.edu.uco.ucobet.generales.application.useCase.state.getstates.GetStates;
+import co.edu.uco.ucobet.generales.application.usecase.state.GetStates;
 import co.edu.uco.ucobet.generales.domain.state.StateDomain;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class GetStatesImpl implements GetStates {
@@ -22,6 +21,7 @@ public class GetStatesImpl implements GetStates {
     public List<StateDomain> execute(StateDomain domain) {
         return stateRepository.findAll().stream()
                 .map(StateEntityMapper.INSTANCE::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
+
 }
